[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ping-lmi"
version = "0.1.0"
description = "Ping Peang a Polite web spider"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ping" }]

[project.scripts]
ping-spider = "ping.cli:main"

[tool.setuptools.packages.find]
include = ["ping*"]
